# ikigai-whatsapp-bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pylintrc  Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ikigai_whatsapp_bot/: client.py  data_types.py  enums.py  main.py  models.py  schemas.py  services.py  settings.py
ikigai_whatsapp_bot/clients/: __init__.py  api.py  base.py  whatsapp.py
k8s/ikigai-whatsapp-bot/: Chart.yaml  local.test.yaml  secrets.dev.yaml  secrets.prod.yaml  values.dev.yaml  values.prod.yaml  values.yaml
k8s/ikigai-whatsapp-bot/templates/: deployment.yaml  ingress.yaml  network-policy.yaml  service.yaml
