[tool.poetry]
name = "ikigai-whatsapp-bot"
version = "0.1.0"
description = ""
authors = ["Sam Onaisi <sam.onaisi@learningplanetinstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
httpx = "^0.28.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
pywa = {version ="^2.4.0", extras=["fastapi"]}
ipython = "^8.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.2"


[tool.black]
line-length = 120
target-version = ["py311"]
verbose = false
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["ikigai_whatsapp_bot"]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_first_party = ["flows", "framework", "utils", "ikigai_whatsapp_bot"]
filter_files = true
force_alphabetical_sort_within_sections = true

[tool.pylint.main]
max-line-length = 120  # the maximum length of a line
disable = ["fixme"]  # ignore TODOs and FIXMEs
source-roots = ["ikigai_whatsapp_bot"]  # the source roots for pylint to check
ignore-patterns = ["tests", "migrations", "legacy__*.py"]  # ignore the tests, migrations and legacy files

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
